--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-crossterm = "0.27.0"
+color-eyre = "0.6.3"
+crossterm = { version = "0.27.0", features = ["event-stream"] }
+futures = "0.3.30"
 ratatui = "0.26.2"
+tokio = { version = "1.38.0", features = ["full"] }
+tokio-util = "0.7.11"
