--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 color-eyre = "0.6.3"
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3.30"
+rand = "0.8.5"
 ratatui = "0.26.2"
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-util = "0.7.11"
